request(contact|navigation|team): fixed nav on mobile, team section on tablet/mobile, and contact button on mobile.

--- a/src/components/navigation/navigation.sass
+++ b/src/components/navigation/navigation.sass
@@ -8,6 +8,7 @@
     @extend .container-large
     @include phone
       padding-top: 1rem
+      display: block
     align-items: center
     justify-content: space-between
     padding-top: 2rem
@@ -15,6 +16,8 @@
 
   &__hamburger
     @include hamburger-basic($hero-white, .25s, 2rem, 1.15rem)
+    @include phone
+      margin-bottom: 2rem
 
   &__buttons
     display: flex
@@ -22,7 +25,7 @@
   &__appt-btn
     @extend h3
     transition: all .2s ease
-    margin: 0 12px
+    margin: 0 12px 0 0 
     border: 2px solid $hero-white
     border-radius: 8px
     cursor: pointer
