--- a/src/components/sections/contact/contact.sass
+++ b/src/components/sections/contact/contact.sass
@@ -65,7 +65,7 @@
     @include tablet
       top: calc(63% - 80px)
     @include phone
-      top: calc(74.5% - 80px)
+      top: calc(74.5% - 150px)
       max-width: 100%
     position: absolute
     top: calc(65% - 60px)
