--- a/src/components/sections/team/team.sass
+++ b/src/components/sections/team/team.sass
@@ -1,10 +1,10 @@
 .team
-  @include ipad-pro
-    height: 65vh
-  @include tablet
-    height: 90vh
-  @include phone
-    height: 75vh
+  // @include ipad-pro
+  //   height: 65vh
+  // @include tablet
+  //   height: 90vh
+  // @include phone
+  //   height: 75vh
   height: 100%
 
   &__wrapper
